--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a class="navb" href="#">Contact</a></li>
             <li><a class="navb" href="#">Profile</a></li>
         </ul>
-        <a href="contact.html" class="consult">Free Consultation</a>
+        <a href="#" class="consult">Free Consultation</a>
     </nav>
 
     <div class="container">
