--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="menu">
             <li><a class="navb" href="#">Home</a></li>
             <li><a class="navb" href="#">Services</a></li>
-            <li><a class="navb" href="#">Gallery</a></li>
+            <li><a class="navb" href="gallery.html">Gallery</a></li>
             <li><a class="navb" href="#">Contact</a></li>
             <li><a class="navb" href="#">Profile</a></li>
         </ul>
