--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a class="navb" href="#">Home</a></li>
             <li><a class="navb" href="#">Services</a></li>
             <li><a class="navb" href="gallery.html">Gallery</a></li>
-            <li><a class="navb" href="#">Contact</a></li>
+            <li><a class="navb" href="experiment.html">Experimental</a></li>
             <li><a class="navb" href="#">Profile</a></li>
         </ul>
         <a href="#" class="consult">Free Consultation</a>
@@ -34,6 +34,10 @@
     <div class="container">
         <div class="text">
             <h1 style="text-align: center;">HAIR GROOMING NEEDS IN YOUR CITY</h1>
+        </div>
+
+        <div style="height:600px;">
+            
         </div>
 
 
